--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@plugin "flowbite/plugin";
+@source "../node_modules/flowbite";
+@import "flowbite/src/themes/default";
 @import 'swiper/swiper-bundle.min.css';
